--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dartz:
   dio:
   flutter_bloc:
+  shared_preferences: ^2.2.2
   #shimmer: ^3.0.0
   smooth_page_indicator: ^1.0.0
   cached_network_image:
